--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
@@ -24,6 +25,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "multer": "^1.4.3",
     "uuid": "^8.3.2"
   }
 }
