--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
+    "csv-parse": "^4.16.3",
     "express": "^4.17.1",
     "multer": "^1.4.3",
     "uuid": "^8.3.2"
